# llama.cpp

./: CMakeLists.txt
common/: common.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  Makefile.perf  README-perf.md  common.h  ggml-cpu.c  matmul-perf-demo.c  ops.cpp  perf-example.c  perf-monitor.c  perf-monitor.h
tools/export-lora/: export-lora.cpp
tools/main/: CMakeLists.txt  main.cpp
tools/mtmd/: clip.cpp
tools/server/: CMakeLists.txt
